	  having in an environment without tcl.  Later this should be
	  changed to depend on the more general has_tcl instead, but AWI's
	  opinion is that has_tcl is broken in sysloc.in at the moment so we
	  will stick with depending on enable_tcl for a while.

	* src/plcore.c: Change from lt_dlopen to lt_dlopenext for more
	  cross-platform suffix generality.

2002-12-07  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* drivers/Makefile.am: Make tk and tkwin static drivers work. This
	  completes the static drivers configuration.

	* bindings/t*/pkgIndex.tcl.in: search for Pltk and Plplotter entry
	  points in libplplot if a search in the dynamic drivers fails.
	  This is required for static drivers since in that case the entry 
	  points (and drivers) are put in libplplot.
	  
	* PROBLEMS: reorganization and updating to help set our priorities
	  for what must be accomplished before the next release.

2002-12-06  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

        * Configure test executables in examples for c++, f77, and tk.  make
	  check builds the uninstalled c, c++, f77, and tk examples fine,
	  and plplot-test.sh works with these uninstalled examples with some
	  limitations that are discussed on list.

	* Make all static drivers (except for tk and tkwin whose
	  implementation will be more complicated) work using the automake
	  convenience library approach.

2002-12-05  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Configure test executables in examples/c/Makefile.am
	
	* Clean up Makefile.am files and also switch from LIBADD to LDFLAGS
	  for interlibrary dependencies as suggested by documentation.
	  
	* Change fortran and C++ driver names to libplplotf77 and libplplotcxx
	  because of name-clash concerns.

2002-12-04  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Begin configuration of octave using autotools.  plplot_octave.oct
	  builds and installs, but no other part of octave is done yet.
	  Note this and all future autotools work is being done on the MAIN